2018.8/_sources/plugins/available/demux/emp-paired.txt
emp-paired: Demultiplex paired-end sequence data generated with the EMP protocol.
=================================================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime demux emp-paired [OPTIONS]

     Demultiplex paired-end sequence data (i.e., map barcode reads to sample
     ids) for data generated with the Earth Microbiome Project (EMP) amplicon
     sequencing protocol. Details about this protocol can be found at
     http://www.earthmicrobiome.org/protocols-and-standards/

   Options:
     --i-seqs ARTIFACT PATH EMPPairedEndSequences
                                     The paired-end sequences to be
                                     demultiplexed.  [required]
     --m-barcodes-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata.
                                     [required]
     --m-barcodes-column MetadataColumn[Categorical]
                                     Column from metadata file or artifact
                                     viewable as metadata. The sample metadata
                                     column containing the per-sample barcodes.
                                     [required]
     --p-rev-comp-barcodes / --p-no-rev-comp-barcodes
                                     If provided, the barcode sequence reads will
                                     be reverse complemented prior to
                                     demultiplexing.  [default: False]
     --p-rev-comp-mapping-barcodes / --p-no-rev-comp-mapping-barcodes
                                     If provided, the barcode sequences in the
                                     sample metadata will be reverse complemented
                                     prior to demultiplexing.  [default: False]
     --o-per-sample-sequences ARTIFACT PATH SampleData[PairedEndSequencesWithQuality]
                                     The resulting demultiplexed sequences.
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.demux.methods import emp_paired

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Demultiplex paired-end sequence data generated with the EMP protocol.

   Demultiplex paired-end sequence data (i.e., map barcode reads to sample
   ids) for data generated with the Earth Microbiome Project (EMP) amplicon
   sequencing protocol. Details about this protocol can be found at
   http://www.earthmicrobiome.org/protocols-and-standards/

   Parameters
   ----------
   seqs : EMPPairedEndSequences
       The paired-end sequences to be demultiplexed.
   barcodes : MetadataColumn[Categorical]
       The sample metadata column containing the per-sample barcodes.
   rev_comp_barcodes : Bool, optional
       If provided, the barcode sequence reads will be reverse complemented
       prior to demultiplexing.
   rev_comp_mapping_barcodes : Bool, optional
       If provided, the barcode sequences in the sample metadata will be
       reverse complemented prior to demultiplexing.

   Returns
   -------
   per_sample_sequences : SampleData[PairedEndSequencesWithQuality]
       The resulting demultiplexed sequences.</pre>
       </div>
     </div>
   </div>